<resources>
    <string name="app_name">PracticaUnoISMD</string>
    <string name="nueve">9</string>
    <string name="resultadoHint">Resultado</string>
    <string name="btnSiete">7</string>
    <string name="btnOcho">8</string>
    <string name="bntNueve">9</string>
    <string name="btnBorrarC">C</string>
    <string name="btnCuatro">4</string>
    <string name="btnCinco">5</string>
    <string name="btnSeis">6</string>
    <string name="btnMas">+</string>
    <string name="btnUno">1</string>
    <string name="btnDos">2</string>
    <string name="btnTres">3</string>
    <string name="btnMenos">-</string>
    <string name="btnCero">0</string>
    <string name="btnMultiplicar">*</string>
    <string name="btnDividir">/</string>
    <string name="btnIgual">=</string>
</resources>
