<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="90dp">
        <EditText
            android:id="@+id/edtResultadoX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resultadoHint"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"
            android:textSize="40dp">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSieteX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnSiete"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonOchoX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnOcho"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonNueveX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/bntNueve"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonBorrarX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnBorrarC"
            android:background="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCuatroX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnCuatro"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonCincoX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnCinco"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonSeisX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnSeis"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonSumarX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnMas"
            android:background="@color/colorGrayChido"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUnoX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnUno"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonDosX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnDos"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonTresX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnTres"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonRestarX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnMenos"
            android:background="@color/colorGrayChido"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCeroX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnCero"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/buttonMultiplicarX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnMultiplicar"
            android:background="@color/colorGrayChido"/>
        <Button
            android:id="@+id/buttonDividirX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnDividir"
            android:background="@color/colorGrayChido"/>
        <Button
            android:id="@+id/buttonIgualX"
            android:layout_width="@dimen/anchuraBoton"
            android:layout_height="@dimen/alturaBoton"
            android:text="@string/btnIgual"
            android:background="@color/colorGrayChido"/>
    </LinearLayout>
</LinearLayout>